--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -125,7 +125,7 @@ p {
                 border-radius: 0 4px 4px 4px;
             }
 
-            @include breakpoint(max-width 797px) {
+            @include breakpoint(0px 797px) {
                 display: flex;
                 flex-flow: column;
                 > ul.dropdown-menu {
